--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
       <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <title>Isaac Park</title>
         <link rel="stylesheet" href="public/style.css"/>
       </head>
