--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
         <title>Isaac Park</title>
         
-        <link rel="stylesheet" href="public/style.css"/>
+        <link rel="stylesheet" href="/public/style.css"/>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab"/>
+        <link rel="stylesheet" href='/public/fontello/css/fontello.css'/>
       </head>
       <body>
         <div id='content'></div>
