--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="/public/style.css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab"/>
         <link rel="stylesheet" href='/public/fontello/css/fontello.css'/>
+
+        <link rel="icon" href="/public/favcon.png" />
       </head>
       <body>
         <div id='content'></div>
